--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-ersion: '3'
+version: '3'
 services:
   app:
     build: .
-    command: pm2-dev ./app/index.js
     environment:
       NODE_ENV: development
       NODE_APP_INSTANCE: ''
     ports:
       - '8080:8080'
     volumes:
-      - .:/home/nodejs/app
-      - /home/nodejs/app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
 
   nginx:
     image: nginx:1.14
